--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jakartaee>10.0.0</jakartaee>
+        <!-- Update to JDK 21 -->
+        <maven.compiler.release>21</maven.compiler.release>
     </properties>
     
     <dependencies>
@@ -28,8 +30,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <!-- Update to JDK 21 -->
+                    <release>21</release>
                 </configuration>
             </plugin>
             <plugin>
