--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jakartaee>10.0.0</jakartaee>
-        <!-- Update to JDK 21 -->
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
     
     <dependencies>
@@ -28,10 +28,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <!-- Update to a version that supports JDK 11 and later -->
+                <version>3.11.0</version>
                 <configuration>
-                    <!-- Update to JDK 21 -->
-                    <release>21</release>
+                    <!-- Remove source and target configuration -->
+                    <!-- These settings will be inferred from maven.compiler.source and maven.compiler.target properties -->
                 </configuration>
             </plugin>
             <plugin>
