--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
         <servlet-class>com.mycompany.deployapliccation.RegistrationServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>LoginLervlet</servlet-name>
+        <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.mycompany.deployapliccation.LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
@@ -21,8 +21,8 @@
         <url-pattern>/RegistrationServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>LoginLervlet</servlet-name>
-        <url-pattern>/LoginLervlet</url-pattern>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/LoginServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
